discussion/kv_engine/155719/155719_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'cheshire-cat'

* cheshire-cat:
  MB-46628: Consumer must be able to call CommitSyncWrite::getMessageSize

Change-Id: I66287dfb4a97b80a58f8359c9ddaf35d32181aef

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-14 11:08:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 11:43:17.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9855/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9855/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11852/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11852/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8444/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36844/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/366/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31479/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10507/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11427/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11579/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 13:27:55.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9866/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9866/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9866/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8444/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36844/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/366/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31479/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10507/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11427/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11579/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11863/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-14 15:00:39.000000000
Message: 
Patch Set 1: Verified+1

override clang-tidy, spdlog issue
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-14 15:00:42.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-15 07:55:22.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-15 08:47:40.000000000
Message: 
Change has been successfully merged by Ben Huddleston
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 08:47:48.000000000
Message: 
Patch Set 1:

Build Started http://cv.jenkins.couchbase.com/job/kv_engine-post-commit-master/8012/ (1/2)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 08:47:48.000000000
Message: 
Patch Set 1:

Build Started http://cv.jenkins.couchbase.com/job/kv_engine-post-commit-TSan-master/5196/ (2/2)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 10:59:08.000000000
Message: 
Patch Set 1:

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-post-commit-master/8012/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-post-commit-TSan-master/5196/ : SUCCESS'
----------------------------------------------------------------------------------------------------------------------
